name:                pdfoutline
version:             0.1.0.0
synopsis:            Adds outlines to pdf files 
license:             PublicDomain
author:              Eugeniy Meshcheryakov
maintainer:          eugen@debian.org
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable pdfoutline
  main-is: Main.hs
  build-depends: base >=4.8 && <4.9, pdf-toolbox-core >= 0.0.4.1, pdf-toolbox-document >= 0.0.7.1, io-streams, parsec
  default-language: Haskell2010
  ghc-options: -Wall
